@@ -1,3 +1,6 @@
+* Add `Cuba::Safe` plugin. This plugin contains security related
+  defaults.
+
 3.3.0
 
 * Restrict when to add the default content type.
